--- a/app/styles/HomeFeed.css
+++ b/app/styles/HomeFeed.css
@@ -1,3 +1,8 @@
 .home-feed-title {
   color: purple;
 }
+
+.homefeed {
+    color: red;  /* Changed color to red */
+    /* ... existing styles ... */
+}
